<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.jenkins-ci.plugins</groupId>
    <artifactId>plugin</artifactId>
    <version>1.609.1</version>
  </parent>

  <artifactId>scm-sync-configuration</artifactId>
  <name>SCM Sync Configuration Plugin</name>
  <version>0.0.11-SNAPSHOT</version>
  <packaging>hpi</packaging>
  <url>http://wiki.jenkins-ci.org/display/JENKINS/SCM+Sync+configuration+plugin</url>
  <description>SCM Sync Configuration Jenkins plugin is aimed at 2 main features : First, keep sync'ed your config.xml (and other ressources) jenkins files with a SCM repository (backup), Secondly, track changes (and author) made on every file with commit messages.</description>

  <licenses>
    <license>
      <name>MIT</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>
    
  <developers>
    <developer>
      <id>fcamblor</id>
      <name>Frederic Camblor</name>
      <email>fcamblor+jenkinswiki@gmail.com</email>
    </developer>
    <developer>
      <id>bpaquet</id>
      <name>Bertrand Paquet</name>
      <email>bertrand.paquet@gmail.com</email>
    </developer>
    <developer>
      <id>rodrigc</id>
      <name>Craig Rodrigues</name>
      <email>rodrigc@FreeBSD.org</email>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <powermock.version>1.6.4</powermock.version>
  </properties>
    
  <repositories>
    <repository>
        <id>repo.jenkins-ci.org</id>
        <url>https://repo.jenkins-ci.org/public/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
        <id>repo.jenkins-ci.org</id>
        <url>https://repo.jenkins-ci.org/public/</url>
    </pluginRepository>
  </pluginRepositories>
  
  <build>
	<pluginManagement>
		<plugins>
		   <plugin>
		     <groupId>org.eclipse.m2e</groupId>
		     <artifactId>lifecycle-mapping</artifactId>
		     <version>1.0.0</version>
		     <configuration>
		       <lifecycleMappingMetadata>
		         <pluginExecutions>
		           <pluginExecution>
		             <pluginExecutionFilter>
		               <groupId>org.codehaus.gmaven</groupId>
		               <artifactId>gmaven-plugin</artifactId>
		               <versionRange>[1.5,)</versionRange>
		               <goals>
		                 <goal>generateTestStubs</goal>
		                 <goal>testCompile</goal>
		               </goals>
		             </pluginExecutionFilter>
		             <action>
		               <execute>
		                 <runOnIncremental>false</runOnIncremental>
		               </execute>
		             </action>
		           </pluginExecution>
		           <pluginExecution>
		             <pluginExecutionFilter>
		               <groupId>org.codehaus.plexus</groupId>
		               <artifactId>plexus-maven-plugin</artifactId>
		               <versionRange>[1.3.8,)</versionRange>
		               <goals>
		                 <goal>merge-descriptors</goal>
		               </goals>
		             </pluginExecutionFilter>
		             <action>
		               <execute>
		                 <runOnIncremental>false</runOnIncremental>
		               </execute>
		             </action>
		           </pluginExecution>
		           <pluginExecution>
		             <pluginExecutionFilter>
		               <groupId>com.google.code.maven-replacer-plugin</groupId>
		               <artifactId>maven-replacer-plugin</artifactId>
		               <versionRange>[1.3.2,)</versionRange>
		               <goals>
		                 <goal>replace</goal>
		               </goals>
		             </pluginExecutionFilter>
		             <action>
		               <execute>
		                 <runOnIncremental>false</runOnIncremental>
		               </execute>
		             </action>
		           </pluginExecution>
		         </pluginExecutions>
		       </lifecycleMappingMetadata>
		     </configuration>
		   </plugin>
           <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <!-- To have pushChanges parameter available -->
                <version>2.5.1</version>
                <configuration>
                    <!-- Git scm specific behaviour -->
                    <localCheckout>true</localCheckout>
                    <pushChanges>true</pushChanges>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Needed to avoid some permgen space errors during test execution ... -->
                    <argLine>-XX:MaxPermSize=128m</argLine>
                </configuration>
            </plugin>
		</plugins>
	</pluginManagement>
	<plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version><!--$NO-MVN-MAN-VER$-->
            <configuration>
                <source>1.6</source>
                <target>1.6</target>
            </configuration>
        </plugin>
 		<plugin>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-maven-plugin</artifactId>
			<version>1.3.8</version>
			<executions>
				<execution>
				<id>merge</id>
				<configuration>
					<descriptors>
						<descriptor>src/main/resources/META-INF/plexus/components.xml</descriptor>
					</descriptors>
				</configuration>
				<phase>generate-resources</phase>
				<goals>
					<goal>merge-descriptors</goal>
				</goals>
			</execution>
			</executions>
		</plugin>
        <plugin>
            <!-- Fix the injected tests source generated by maven-hpi-plugin. -->
            <groupId>com.google.code.maven-replacer-plugin</groupId>
            <artifactId>maven-replacer-plugin</artifactId>
            <version>1.3.2</version>
            <executions>
                <execution>
                    <phase>process-test-sources</phase>
                    <goals>
                        <goal>replace</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <includes>
                    <include>target/inject-tests/*.java</include>
                    <include>target/generated-test-sources/injected/*.java</include>
                </includes>
                <regex>false</regex>
                <replacements>
                    <replacement>
                        <token>Map parameters = new HashMap();</token>
                        <value>Map&lt;String,String&gt; parameters = new HashMap&lt;String,String&gt;();</value>
                    </replacement>
                     <replacement>
                        <token>new org.jvnet.hudson.test.PluginAutomaticTestBuilder()</token>
                        <value>org.jvnet.hudson.test.PluginAutomaticTestBuilder</value>
                    </replacement>
                </replacements>
            </configuration>
        </plugin>
	</plugins>
  </build>

  <dependencyManagement>
      <dependencies>
          <dependency>
              <groupId>org.jenkins-ci.main</groupId>
              <artifactId>maven-plugin</artifactId>
              <version>2.3</version>
              <exclusions>
                  <exclusion>
                      <!-- Conflicts with org.jenkins-ci.plugins:subversion dependency -->
                      <groupId>org.jvnet.hudson.plugins</groupId>
                      <artifactId>subversion</artifactId>
                  </exclusion>
              </exclusions>
          </dependency>
          <dependency>
              <groupId>org.jenkins-ci.main</groupId>
              <artifactId>jenkins-test-harness</artifactId>
              <version>${project.parent.version}</version>
              <exclusions>
                  <exclusion>
                      <!-- Conflicts with org.jenkins-ci.plugins:subversion dependency -->
                      <groupId>org.jvnet.hudson.plugins</groupId>
                      <artifactId>subversion</artifactId>
                  </exclusion>
              </exclusions>
          </dependency>
      </dependencies>
  </dependencyManagement>

  <dependencies>
     <dependency>
		<groupId>org.sonatype.sisu</groupId>
		<artifactId>sisu-inject-plexus</artifactId>
	    <version>2.6.0</version>
    </dependency>
     
  	<dependency>
      <groupId>org.apache.maven.scm</groupId>
      <artifactId>maven-scm-manager-plexus</artifactId>
      <version>1.9.5</version>
      <!-- Prevent pulling in old stuff. We use the sisu plexus from above. -->
      <exclusions>
      	<exclusion>
      		<groupId>org.codehaus.plexus</groupId>
      		<artifactId>plexus-container-default</artifactId>
      	</exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.jenkins-ci.plugins</groupId>
      <artifactId>subversion</artifactId>
	  <version>2.5.7</version>
    </dependency>    
    <!-- providers declaration -->
    <dependency>
      <groupId>com.google.code.maven-scm-provider-svnjava</groupId>
      <artifactId>maven-scm-provider-svnjava</artifactId>
      <version>2.1.1</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.maven.scm</groupId>
      <artifactId>maven-scm-provider-gitexe</artifactId>
      <version>1.9.5</version>
    </dependency>
    
    
    <!-- TEST DEPENDENCIES -->
    <!-- powermock to mock static methods.. especially Hudson.getInstance() -->
	<dependency>
	   <groupId>org.powermock</groupId>
	   <artifactId>powermock-module-junit4</artifactId>
	   <version>${powermock.version}</version>
	   <scope>test</scope>
	</dependency>
	<dependency>
	   <groupId>org.powermock</groupId>
	   <artifactId>powermock-api-mockito</artifactId>
	   <version>${powermock.version}</version>
	   <scope>test</scope>
	</dependency>
  </dependencies>
  
  <scm>
    <connection>scm:git:https://github.com/jenkinsci/scm-sync-configuration-plugin.git</connection>
    <developerConnection>scm:git:https://github.com/jenkinsci/scm-sync-configuration-plugin.git</developerConnection>
    <url>https://github.com/jenkinsci/scm-sync-configuration-plugin</url>
    <tag>HEAD</tag>
  </scm>
</project>
